--- a/css/simulator.css
+++ b/css/simulator.css
@@ -1,24 +1,18 @@
-.svg-container { 
-	display: inline-block;
-	position: relative;
+.svg-container, .svg-badge, .svg-content { display: inline-block; }
+.svg-container, .svg-badge { vertical-align: middle; overflow: hidden; position: relative; }
+
+.svg-container {
 	width: 100%;
-	padding-bottom: 100%; 
-	vertical-align: middle; 
-	overflow: hidden; 
+	padding-bottom: 100%;
 }
 
-.svg-badge { 
-	display: inline-block;
-	position: relative;
+.svg-badge {
 	width: 70%;
 	padding-bottom: 40%;
 	margin-left:30%;
-	vertical-align: middle; 
-	overflow: hidden; 
 }
 
-.svg-content { 
-	display: inline-block;
+.svg-content {
 	position: absolute;
 	top: 0;
 	left: 0;
